<resources>
    <string name="app_name">Purposeful Community</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="communities">Communities</string>
    <string name="my_communities">My Communities</string>
    <string name="title_activity_community">Communities</string>
    <string name="title_create_community">Create Community</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="go_sigin">Already a member? Login</string>

    <string name="size">Size</string>

    <string name="join_comm">Join a community</string>
    <string name="create_comm">Create Community</string>
    <string name="description">Description</string>
    <string name="priv">Private</string>

    <string name="add_template">Type</string>
    <string name="add_csd">Post</string>

    <string name="template_name">Template Name</string>
    <string name="template_number">Number of Templates</string>
    <string name="enter_template">Enter Templates</string>
    <string name="property_name">Property Name</string>
    <string name="property_type">Property Type</string>
    <string name="create">Create</string>
    <string name="title_activity_enter_templates">Create Type</string>
    <string name="pick_type">Pick Type</string>

    <string name="about">About</string>
    <string name="join">Join</string>

    <string name="explore">Explore</string>
    <string name="log_out">Log Out</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="leave">Leave</string>

    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="templates">Types</string>
    <string name="add">Add</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="value">Value</string>
</resources>
