<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Community.ShowCommActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/communityImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimary"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textPrivate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priv"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:textColor="@color/colorWhite"/>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size"
                            android:layout_gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/colorWhite"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"/>

                        <TextView
                            android:id="@+id/textSize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size"
                            android:layout_gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/colorWhite"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="match_parent"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_height="35dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_gravity="center"
        android:background="@drawable/button_shape1"
        android:textColor="@color/colorWhite"
        android:text="@string/join"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/textAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTemplates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:paddingBottom="80dp"
            android:clipToPadding="false"/>
    </LinearLayout>
</LinearLayout>